--- a/src/Smartstore.Web/Views/Pdf/ReceiptHeader.cshtml
+++ b/src/Smartstore.Web/Views/Pdf/ReceiptHeader.cshtml
@@ -17,7 +17,7 @@
             <td style="width: 50%; text-align: left; vertical-align: middle">
                 @if (imageUrl.HasValue())
                 {
-                    <img src="@imageUrl" alt="" style="max-height: 100px" />
+                    <img src="@imageUrl" alt="@Model.StoreName" style="max-height: 100px" />
                 }
                 else
                 {
