--- a/src/Smartstore.Web/Views/Catalog/Partials/OffCanvasCompare.cshtml
+++ b/src/Smartstore.Web/Views/Catalog/Partials/OffCanvasCompare.cshtml
@@ -24,7 +24,7 @@
                         @if (item.Image != null && item.Image.HasImage())
                         {
                             <a class="img-center-container" asp-route="Product" asp-route-SeName="@item.SeName" title="@item.Image.Title">
-                                <img sm-model="item.Image" />
+                                <img sm-model="item.Image" attr-alt='(item.Image.Alt.IsEmpty(), item.Name)' />
                             </a>
                         }
                     </div>
