--- a/src/Smartstore.Web/Views/Error/Error.cshtml
+++ b/src/Smartstore.Web/Views/Error/Error.cshtml
@@ -64,7 +64,7 @@
 </head>
 <body>
     <div class="page">
-        <img src="~/images/sad.png" width="128" height="128" />
+        <img src="~/images/sad.png" width="128" height="128" alt="@title" />
         
         @if (title.HasValue())
         {
