--- a/src/Smartstore.Web/Views/Shared/Components/HomeBrands/Default.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Components/HomeBrands/Default.cshtml
@@ -14,7 +14,7 @@
             <article class="art" data-id="@item.Id">
                 <div sm-if="Model.DisplayImages && item.Image != null && item.Image.HasImage()" class="art-picture-block">
                     <a href="@url" class="art-picture img-center-container">
-                        <img sm-model="item.Image" loading="lazy" />
+                        <img sm-model="item.Image" loading="lazy" attr-alt='(item.Image.Alt.IsEmpty(), item.Name)' />
                     </a>
                 </div>
                 <div class="art-genericname">
