--- a/src/Smartstore.Web/Views/ShoppingCart/Partials/OffCanvasShoppingCart.cshtml
+++ b/src/Smartstore.Web/Views/ShoppingCart/Partials/OffCanvasShoppingCart.cshtml
@@ -49,7 +49,7 @@
                     <div class="row sm-gutters">
                         <div sm-if="Model.ShowProductImages" class="col col-image col-alpha">
                             <a sm-if="item.Image.HasImage()" class="img-center-container" href="@item.ProductUrl" title="@item.Image.Title">
-                                <img sm-model="item.Image" />
+                                <img sm-model="item.Image" attr-alt='(item.Image.Alt.IsEmpty(), item.ProductName)' />
                             </a>
                         </div>
                         <div class="col col-data">
@@ -65,9 +65,9 @@
                             <div sm-if="bundleItemsWithImages.Length > 0" class="mb-bundle-pictures mt-3">
                                 @for (var i = 0; i < bundleItemsWithImages.Length; ++i)
                                 {
-                                    var bundleItem = bundleItemsWithImages[i];
-                                    <a href="@bundleItem.ProductUrl" title="@bundleItem.ProductName" class="link-dnn">
-                                        <img sm-model="bundleItem.ImageModel" />
+                                    var item = bundleItemsWithImages[i];
+                                    <a href="@item.ProductUrl" title="@item.ProductName" class="link-dnn">
+                                        <img sm-model="item.ImageModel" attr-alt='(item.ImageModel.Alt.IsEmpty(), item.ProductName)' />
                                     </a>
                                     <i sm-if="(i + 1) < bundleItemsWithImages.Length" class="fa fa-plus"></i>
                                 }
