--- a/src/Smartstore.Web/wwwroot/shared/_bootstrap-icons.scss
+++ b/src/Smartstore.Web/wwwroot/shared/_bootstrap-icons.scss
@@ -14,8 +14,7 @@
     line-height: 1;
     //-webkit-backface-visibility: hidden;
 
-    > use,
-    > g {
+    > :is(use, g) {
         transform-origin: center;
     }
 }
