--- a/src/Smartstore.Web/wwwroot/shared/_entity-picker.scss
+++ b/src/Smartstore.Web/wwwroot/shared/_entity-picker.scss
@@ -72,8 +72,7 @@
         color: $gray-600;
     }
 
-    .thumb,
-    .data {
+    :is(.thumb, .data) {
         position: relative;
         box-sizing: border-box;
         display: block;
