--- a/src/Smartstore.Web/wwwroot/shared/_mixins.scss
+++ b/src/Smartstore.Web/wwwroot/shared/_mixins.scss
@@ -230,3 +230,11 @@
     @include trailing-action($size);
     --input-clear-size: #{$size};
 }
+
+@mixin matches-any($selectors...) {
+    // join with comma + space
+    $list: join($selectors, ", ");
+    #{":is"}(#{$list}) {
+        @content;
+    }
+}
