--- a/src/Smartstore.Web/wwwroot/shared/_dropdown.scss
+++ b/src/Smartstore.Web/wwwroot/shared/_dropdown.scss
@@ -61,8 +61,7 @@
     margin-inline: calc(var(--dropdown-padding-x) * -1);
 }
 
-.dropdown-menu-light-icons .dropdown-item:not(.disabled) > i,
-.dropdown-menu-light-icons .dropdown-item:not(.disabled) > svg {
+.dropdown-menu-light-icons .dropdown-item:not(.disabled) > :is(i, svg) {
 	color: $dropdown-icon-color;
 }
 
@@ -79,22 +78,17 @@
 	}
 
 	&:not(.disabled) {
-		> i, 
-        > svg {
+        > :is(i, svg) {
 			color: $dropdown-link-color;
 		}
 
-		.dropdown-group.show > & > i,
-        .dropdown-group.show > & > svg,
-		&:hover > i,
-        &:hover > svg {
+		.dropdown-group.show > & > :is(i, svg),
+        &:hover > :is(i, svg) {
 			color: $dropdown-link-hover-color;
 		}
 
-		&:active > i,
-        &:active > svg,
-		&:focus > i,
-        &:focus > svg {
+        &:active > :is(i, svg),
+        &:focus > :is(i, svg) {
 			color: $dropdown-link-active-color;
 		}
 	}
