--- a/src/Smartstore.Web/Views/Shared/Partials/Product.List.Item.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Partials/Product.List.Item.cshtml
@@ -73,11 +73,11 @@
         }
     }
 
-    <div class="art-name h3" sm-language-attributes-for="Model.Name">
+    <h3 class="art-name" sm-language-attributes-for="Model.Name">
         <a href="@Model.DetailUrl" title="@Model.Name.ToString()">
             <span>@Html.Raw(Model.Name)</span>
         </a>
-    </div>
+    </h3>
 
     @if (list.ShowDescription)
     {
