Script version review

--- a/src/Smartstore.Web/Views/Shared/Partials/ShopBar.Tools.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Partials/ShopBar.Tools.cshtml
@@ -111,5 +111,5 @@
         </div>
     </aside>
     @*TODO: (mh) (core) This is problematic!!! Scripts are there before widget was rendered thus they won't become initialized correctly*@
-    <script src="~/js/public.offcanvas-cart.js?v=6.1.0"></script>
+    <script src="~/js/public.offcanvas-cart.js" asp-append-version="true"></script>
 </widget>
