PayPal: If Google Pay was initially selected on the payment selection page, a script error occurred which prevented all PayPal buttons from loading.

--- a/src/Smartstore.Modules/Smartstore.PayPal/Views/Shared/Components/PayPalPaymentSelection/Default.cshtml
+++ b/src/Smartstore.Modules/Smartstore.PayPal/Views/Shared/Components/PayPalPaymentSelection/Default.cshtml
@@ -35,7 +35,7 @@
     };
 
     $(function () {
-        const ppButton = new PayPalButton("#paypal-button-container", "@Model.Funding");
+        const ppButton = new PayPalButton("#paypal-button-container", "@(Model.Funding == "googlepay" ? "paypal" : Model.Funding)");
         const btnNext = $(".payment-method-next-step-button");
         const btnContainer = $("#paypal-button-container");
         const btnContainerGooglePay = $("#paypal-google-pay-container");
