--- a/src/Smartstore.Web/wwwroot/shared/_offcanvas.scss
+++ b/src/Smartstore.Web/wwwroot/shared/_offcanvas.scss
@@ -32,6 +32,7 @@ body.canvas-noscroll {
     background-color: transparent;
     outline: none;
     &:focus { outline: none }
+    &:focus-visible { outline: revert }
 }
 
 
